<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".Registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/workclout_logo"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginTop="180dp"
            android:layout_marginStart="32dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="240dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:text="Email"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/UserNameID2"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="268dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName|textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="320dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:text="Password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PassWordID2"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="348dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:inputType="textWebPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/RegisterID2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="500dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_coachRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="425dp"
            android:buttonTint="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="Coach"
            android:textColor="@color/white"
            android:theme="@style/checkBoxStyle" />

    </RelativeLayout>

</RelativeLayout>