<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/workclout_logo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_below="@+id/imgView_logo"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tv_login"
                android:orientation="vertical">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_login">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Username"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:background="@drawable/et_bg"/>

                </LinearLayout>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/tv_login">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="Password"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="20sp"/>

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:inputType="textWebPassword"
                            android:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:background="@drawable/et_bg"/>

                    </LinearLayout>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/cb_coachLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:buttonTint="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:text="Coach"
                    android:textColor="@color/white"
                    android:theme="@style/checkBoxStyle" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linlay1"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Login Now"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    android:textColor="@color/white"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="Signup Now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            />

        <Button
            android:id="@+id/btn_resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:text="Forgot Password?"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            />

    </RelativeLayout>

</RelativeLayout>